# cirrhosis_clinical_analysis

./: README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
models/: preprocessor.pkl  rf_model.pkl
notebooks/: 01_cirrhosis_analysis.ipynb
src/: utils.py
