[project]
name = "cirrhosis-clinical-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lifelines>=0.30.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.54.0",
]
